--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django==3.2.16
+Django==4.1.*
 Pillow==8.4.*
-django_admin_sortable2==1.0.4
+django_admin_sortable2==2.1.4
 django_tinymce==3.5.0
 load_dotenv==0.1.0
